--- a/main/templates/run_quiz.html
+++ b/main/templates/run_quiz.html
@@ -48,8 +48,8 @@
                                 <div class="card-body">
                                     {% for option in question.options.all %}
                                     <div class="form-check mt-2">
-                                        <input class="form-check-input" type="radio" name="question_{{question.id}}" id="question_{{question.id}}" value="{{forloop.counter}}">
-                                        <label class="form-check-label" for="question_{{question.id}}" id="q_{{question.id}}_op_{{option.id}}">
+                                        <input class="form-check-input" type="radio" name="question_{{question.id}}" id="q_{{question.id}}_op_{{option.id}}" value="{{forloop.counter}}">
+                                        <label class="form-check-label" for="q_{{question.id}}_op_{{option.id}}">
                                             {{ option }}
                                         </label>
                                     </div>
